"added new fucntionalities and features fixes and improvement"